--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_register">RegisterActivity</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_follow">FollowActivity</string>
+    <string name="title_activity_follow_item">FollowItemActivity</string>
+
 </resources>
