--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_follow">FollowActivity</string>
     <string name="title_activity_follow_item">FollowItemActivity</string>
+    <string name="title_activity_movie_item">MovieItemActivity</string>
 
 </resources>
