Facebook dependencies and MavinCentral Repository added. If you get a build error, let me know, i can fix it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,5 @@
     <string name="title_activity_follow">FollowActivity</string>
     <string name="title_activity_follow_item">FollowItemActivity</string>
     <string name="title_activity_movie_item">MovieItemActivity</string>
-
+    <string name="facebook_app_id">171593419971974</string>
 </resources>
