Updating yunhang's branch (#46)
* Added Javadoc comments to feed and movie classes

* Fixed register class

* Add files via upload

* Fixed register class

* added some javadoc

* Fixed register class

* All done!

* Added Javadocs to the mainActivity and RegisterFragment. Deleted activity_register.xml because it was a useless file, left over from when register was still an activity.

* Added some feed items and made the feed scrollable

* Clicking on the "Following" button opens up a new fragment that lists all members of the 'follow' table in our database. It currently works like that, but obviously the goal is to only see the ones that the current user is following, and not the whole database's data.

We currently don't have the functionality to get the currently logged in user as far as i know so i'm holding off on that part.

* clicking on Following now shows a list of only those who the current user is following

* both following and followers buttons work now

* clicking on Following now shows a list of only those who the current user is following

* both following and followers buttons work now

* updated how the list looks

* The following system all works!

* javadocced

* javadocced

* updated to cater to registering for first time for the list of followers and following

* Implemented the rating system

* Changed some member variable names.
-mCurrentUser
to
-mTargetUser

because sometimes when we view the movie page, we're looking at the list of another user and not our own.  TargetUser could potentially be the currentuser, but not vice versa.

* Javadocced the MovieActivity

* Javadocced everything

* Facebook dependencies and MavinCentral Repository added. If you get a build error, let me know, i can fix it.

* Facebook dependencies and MavinCentral Repository added. If you get a build error, let me know, i can fix it.

* Javadocced everything

* Facebook dependencies and MavinCentral Repositor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_register">RegisterActivity</string>
 
+    <string name="fb_login_protocol_scheme">fb171593419971974</string>
+    <string name="title_activity_follow">FollowActivity</string>
+    <string name="title_activity_follow_item">FollowItemActivity</string>
+    <string name="title_activity_movie_item">MovieItemActivity</string>
+    <string name="facebook_app_id">171593419971974</string>
 </resources>
