--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,10 @@
     <string name="title_activity_follow_item">FollowItemActivity</string>
     <string name="title_activity_movie_item">MovieItemActivity</string>
     <string name="facebook_app_id">171593419971974</string>
+
+
+    <string name="username">Enter new username</string>
+    <string name="password">Enter new password</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
 </resources>
