updated app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MoviesProject</string>
+    <string name="app_name">What\'s Next?</string>
 
     <string name="tab1_string">Home</string>
     <string name="tab2_string">Rate Movies</string>
